fixed width issues

--- a/src/Components/Style.css
+++ b/src/Components/Style.css
@@ -322,4 +322,10 @@ body.light .clear--btn:hover {
   .filter--links {
     flex-direction: column;
   }
+  .form--container {
+    width: 90%;
+  }
+  .task--wrapper {
+    width: 90%;
+  }
 }
